<resources>
    <string name="app_name">Buzz Me</string>
    <string name="version_num">version 0.33</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="regex_sos">^SOS de </string>
    <string name="regex_gilberte">(SOS de )[0-9]+</string>
    <string name="msg_2_send">phone_num</string>
    <string name="entete">"\n[SMS d'alerte automatique]"</string>
    <string name="start_alert">" à "</string>
    <string name="etat_appli">Application inactive!</string>
    <string name="title_notification">Notification</string>
    <string name="title_renvoi">Renvoi de l\'alerte</string>
    <string name="title_info">A propos</string>
    <string name="title_home">Home</string>
    <string name="attention">"Lorsqu\'un SOS est reçu, une fenêtre d\'alerte est affichée.\nD'autres options sont configurables dans la rubrique \"Notifications\".\n\nIl est possible de simuler la réception d'un SOS pour tester la configuration de: \n- la notification d'alerte\n- la liste des contacts à avertir automatiquement\n"</string>
    <string name="txt_alarm">"" </string>
    <string name="txt_list">Numéros destinataires d\'un SMS d\'alerte automatique:</string>
    <string name="rationale">L\'autorisation d\'accès aux SMS est indispensable pour permettre la gestion des SOS</string>
    <string name="notifNpd">Désactiver Le mode \"Ne Pas Déranger\" en cas de reception d\'un SOS</string>
    <string name="notifSon">Jouer une notification sonore sur le canal \"musique\"</string>
    <string name="notifLevel">Niveau sonore de l\'alerte:</string>
    <string name="configuration_buzzme">Configuration BuzzMe</string>
    <string name="notifications">Notifications</string>
    <string name="personnes_alerter">Personnes à alerter</string>
    <string name="configuration_sos_manager">Configuration SOS Manager</string>
    <string name="configuration_du_bo_tier">Configuration du boîtier</string>
    <string name="msg">"Cette opération va déconnecter/connecter le wifi,\nvoulez-vous continuer?"</string>
    <string name="connecter">Connecter</string>
</resources>
