<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/app_name" />

        <item android:title="@string/configuration_buzzme">
            <menu>
                <item
                    android:id="@+id/nav_notif"
                    android:icon="@drawable/ic_alarm_black_24dp"
                    android:title="@string/notifications" />
                <item
                    android:id="@+id/nav_renvoi"
                    android:icon="@drawable/ic_phone_forward_24dp"
                    android:title="@string/personnes_alerter" />
            </menu>
        </item>

        <item android:title="@string/configuration_sos_manager">
            <menu>
                <item
                    android:id="@+id/nav_sos"
                    android:icon="@drawable/ic_watch_black_24dp"
                    android:title="@string/configuration_du_bo_tier" />
            </menu>
        </item>

    </group>
</menu>