<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switchUnmute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:clickable="false"
            android:contentDescription='Désactive le mode "Ne pas déranger" si il est activé'
            android:drawableLeft="@drawable/ic_ring_volume_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="top"
            android:text='Désactiver "NPD" si alerte reçue'
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textViewNotifSon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNotifNpd"
            app:layout_constraintVertical_chainStyle="packed" />

        <Switch
            android:id="@+id/switchSound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:drawableStart="@drawable/ic_alarm_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="top"
            android:showText="false"
            android:text="Alerte sonore"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/alertLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNotifSon"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewNotifSon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/notifSon"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/switchSound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchUnmute"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewNotifEntete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/txt_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewNotifNpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/notifNpd"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/switchUnmute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNotifEntete"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/notifLevel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/levelValue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertLevel"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_optimizationLevel="chains" />

        <SeekBar
            android:id="@+id/alertLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:max="100"
            android:progress="90"
            android:textAlignment="center"
            android:tooltipText="Réglage du niveau"
            app:layout_constraintBottom_toTopOf="@+id/textLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchSound"
            app:layout_constraintVertical_chainStyle="packed"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/levelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="90%"
            app:layout_constraintBottom_toBottomOf="@+id/textLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textLevel"
            app:layout_constraintTop_toBottomOf="@+id/alertLevel"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_optimizationLevel="chains" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>